After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598472 - [Moblin] Fix callback arguments for NbtkGtkLightSwitch
[Moblin] Fix callback arguments for NbtkGtkLightSwitch
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: moblin
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2009-10-14 17:39 UTC by Joshua Lock
Modified: 2009-10-14 17:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[Moblin] Fix callback arguments for NbtkGtkLightSwitch (1.34 KB, patch)
2009-10-14 17:39 UTC, Joshua Lock
committed Details | Review

Description Joshua Lock 2009-10-14 17:39:10 UTC
The callback signature has an extra parameter, this was causing an attempt
at casting a gboolean to a MoblinPanel and causing a crash.
This patch also fixes up the callback method to use the passed parameters.
Comment 1 Joshua Lock 2009-10-14 17:39:12 UTC
Created attachment 145443 [details] [review]
[Moblin] Fix callback arguments for NbtkGtkLightSwitch