Fix callback arguments for NbtkGtkLightSwitch

The callback signature has an extra parameter, this was causing an attempt
at casting a gboolean to a MoblinPanel and causing a crash.
This patch also fixes up the callback method to use the passed parameters.

https://bugzilla.gnome.org/show_bug.cgi?id=598472